<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="400dp"
            android:layout_height="74dp"
            android:inputType="textPersonName"
            android:hint="@string/strInputHint"
            android:ems="10"
            android:id="@+id/inputField" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/inputField"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/tableLayout2">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/strNumber1"
                    android:layout_height="75sp" android:id="@+id/btnNumber1" tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="88dp"/>
            <Button
                    android:text="@string/strNumber2"
                    android:layout_height="75sp" android:id="@+id/btnNumber2"/>
            <Button
                    android:text="@string/strNumber3"
                    android:layout_height="75sp" tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="176dp" android:id="@+id/btnNumber3"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/strNumber4"
                    android:layout_height="75sp" tools:layout_editor_absoluteY="48dp"
                    tools:layout_editor_absoluteX="0dp" android:id="@+id/btnNumber4"/>
            <Button
                    android:text="@string/strNumber5"
                    android:layout_height="75sp" tools:layout_editor_absoluteY="48dp"
                    tools:layout_editor_absoluteX="88dp" android:id="@+id/btnNumber5"/>
            <Button
                    android:text="@string/strNumber6"
                    android:layout_height="75sp" tools:layout_editor_absoluteY="48dp"
                    tools:layout_editor_absoluteX="176dp" android:id="@+id/btnNumber6"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/strNumber7"
                    android:layout_width="wrap_content"
                    android:layout_height="75sp" tools:layout_editor_absoluteY="96dp"
                    tools:layout_editor_absoluteX="0dp" android:id="@+id/btnNumber7"/>
            <Button
                    android:text="@string/strNumber8"
                    android:layout_width="wrap_content"
                    android:layout_height="75sp" tools:layout_editor_absoluteY="96dp"
                    tools:layout_editor_absoluteX="88dp" android:id="@+id/btnNumber8"/>
            <Button
                    android:text="@string/strNumber9"
                    android:layout_width="wrap_content"
                    android:layout_height="75sp" tools:layout_editor_absoluteY="96dp"
                    tools:layout_editor_absoluteX="176dp" android:id="@+id/btnNumber9"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/strDot"
                    android:layout_width="wrap_content"
                    android:layout_height="75sp" tools:layout_editor_absoluteY="144dp"
                    tools:layout_editor_absoluteX="0dp" android:id="@+id/btnDot"/>
            <Button
                    android:text="@string/strNumber0"
                    android:layout_width="wrap_content"
                    android:layout_height="75sp" tools:layout_editor_absoluteY="144dp"
                    tools:layout_editor_absoluteX="86dp" android:id="@+id/btnNumber0"/>
            <Button
                    android:text="@string/strClear"
                    android:layout_width="wrap_content"
                    android:layout_height="75sp" android:id="@+id/btnClear"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="104dp"
            android:layout_height="293dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputField" app:layout_constraintStart_toEndOf="@+id/tableLayout2"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <Button
                android:text="@string/strAdd"
                android:layout_width="match_parent"
                android:layout_height="75sp" android:id="@+id/btnAdd"/>
        <Button
                android:text="@string/strMinus"
                android:layout_width="match_parent"
                android:layout_height="75sp" android:id="@+id/btnMinus"/>
        <Button
                android:text="@string/strMultiply"
                android:layout_width="match_parent"
                android:layout_height="75sp" android:id="@+id/btnMultiply"/>
        <Button
                android:text="@string/strDivide"
                android:layout_width="match_parent"
                android:layout_height="75sp" android:id="@+id/btnDivide"/>
    </LinearLayout>
    <Button
            android:text="@string/strEquals"
            android:layout_width="266dp"
            android:layout_height="47dp"
            android:id="@+id/btnEquals"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tableLayout2"/>
</android.support.constraint.ConstraintLayout>